--- a/themes/scss/include/_base.scss
+++ b/themes/scss/include/_base.scss
@@ -92,10 +92,10 @@ body {
     }
 
     .in, .out {
-        -webkit-animation-duration: 375ms;
+        -webkit-animation-duration: 300ms;
         -webkit-animation-fill-mode: both;
         -webkit-animation-timing-function: ease-in-out;
-        animation-duration: 375ms;
+        animation-duration: 300ms;
         animation-fill-mode: both;
         animation-timing-function: ease-in-out;
 
